--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Notes App</string>
+    <string name="app_name">Күнделік немесе Блог</string>
 
     <!--<Admob ads>-->
     <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
@@ -13,103 +13,64 @@
     <!--<ONESIGNAL_APP_ID>-->
     <string name="ONESIGNAL_APP_ID">########-####-####-####-############</string>
 
+    <string name="navigation_drawer_open">ашу</string>
+    <string name="navigation_drawer_close">жабу</string>
 
-    <string name="made_with_in_srilanka">******</string>
-
-    <string name="navigation_drawer_open">open</string>
-    <string name="navigation_drawer_close">close</string>
-    <string name="settings">Settings</string>
-    <string name="company">Company</string>
-    <string name="email">Email</string>
-    <string name="website">Website</string>
-    <string name="contact">Contact</string>
-    <string name="dark_mode">Dark Mode</string>
-    <string name="about_us">About Us</string>
-    <string name="version">Version</string>
-    <string name="share_app">Share App</string>
-    <string name="share">Share</string>
-    <string name="note_title">Note Title</string>
-    <string name="note_subtitle">Note Subtitle</string>
-    <string name="type_note_here">Type note here..</string>
-    <string name="add_image">Add Image</string>
-    <string name="add_url">Add URL</string>
-    <string name="enter_url">Enter Url</string>
-    <string name="add">Add</string>
-    <string name="cancel">CANCEL</string>
-    <string name="delete_note">Delete Note</string>
-    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
-    <string name="recycle_bin">Recycle bin</string>
-    <string name="delete">Delete</string>
-    <string name="restore">Restore</string>
-    <string name="move_to_recycle_bin">Move to Recycle bin</string>
-    <string name="are_you_sure_you_want_to_move_to_recycle_bin_this_note">Are you sure you want to Move to Recycle bin this note?</string>
+    <string name="share">Бөлісу</string>
+    <string name="note_title">Жазба тақырыбы</string>
+    <string name="note_subtitle">Жазба тақырыпшасы</string>
+    <string name="type_note_here">Жазбаны осы жерге енгізіңіз..</string>
+    <string name="add_image">Сурет қосу</string>
+    <string name="add_url">Сілтеме қосу</string>
+    <string name="enter_url">Сілтемені теріңіз</string>
+    <string name="add">Қосу</string>
+    <string name="cancel">БОЛДЫРМАУ</string>
+    <string name="delete_note">Жазбаны өшіру</string>
+    <string name="are_you_sure_you_want_to_delete_this_note">Жазбаны өшіргіңіз келе ме?</string>
+    <string name="recycle_bin">Қоқыс жәшігі</string>
+    <string name="delete">Өшіру</string>
+    <string name="restore">Қайтару</string>
+    <string name="move_to_recycle_bin">Қоқыс жәшігіне тастау</string>
+    <string name="are_you_sure_you_want_to_move_to_recycle_bin_this_note">Жазбаны қоқыс жәшігіне тастағыңыз келе ме?</string>
     <string name="imageseve">ImageSeve</string>
-    <string name="click_here">Click Here</string>
+    <string name="click_here">Қосымша заттар</string>
     <string name="todo">TODO</string>
-    <string name="this_content_is_deleted">This content is deleted</string>
-    <string name="lock_screen">Lock Screen</string>
-    <string name="home">Home</string>
-    <string name="search_note">Search Note</string>
+    <string name="this_content_is_deleted">Бұл мәліметтер өшірілген</string>
+    <string name="home">Басты бет</string>
+    <string name="search_note">Жазбаны іздеу</string>
 
     <!-- Toast -->
-    <string name="toast_bold">Bold</string>
-    <string name="toast_italic">Italic</string>
-    <string name="toast_underline">Underline</string>
-    <string name="toast_strikethrough">Strikethrough</string>
-    <string name="toast_bullet">Bullet</string>
-    <string name="toast_quote">Quote</string>
-    <string name="toast_format_clear">Format clear</string>
+    <string name="toast_bold">Қалың</string>
+    <string name="toast_italic">Курсив</string>
+    <string name="toast_underline">Астын сызу</string>
+    <string name="toast_strikethrough">Сызылған</string>
+    <string name="toast_bullet">Оқ</string>
+    <string name="toast_quote">Дәйексөз</string>
+    <string name="toast_format_clear">Анық пішімді</string>
 
-    <string name="server_error">Server Error</string>
-    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
-    <string name="try_again">Try Again</string>
+    <string name="server_error">Сервер қатесі</string>
+    <string name="error_connect_net_tryagain">Интернетке қосылып қайталаңыз</string>
+    <string name="try_again">Қайта көру</string>
     <string name="error_nemosofts_key">Error Nemosofts key</string>
     <string name="create_nemosofts_key">Create a new nemosofts key</string>
     <string name="err_internet_not_conn">err internet</string>
-    <string name="exit">Exit</string>
-    <string name="select_image">Select Image</string>
+    <string name="exit">Шығу</string>
+    <string name="select_image">Суретті таңдау</string>
 
-    <string name="clear_cache">Clear Cache</string>
-    <string name="cache_cleared">Cache Cleared</string>
-    <string name="clearing_cache">Clearing Cache..</string>
+    <string name="clear_cache">Кэшты тазарту</string>
+    <string name="cache_cleared">Кэш тазарды</string>
+    <string name="clearing_cache">Кэш тазаруда..</string>
 
-
-    <string name="app_name_pf">PFLockScreen</string>
-    <string name="cancel_pf">Cancel</string>
-    <string name="use_pin_pf">Use pin</string>
+    <string name="cancel_pf">Болдырмау</string>
     <string name="sign_in_pf">Sign in</string>
     <string name="ok_pf">OK</string>
-    <string name="next_pf">Next</string>
-    <string name="forgot_pf">Forgot?</string>
-    <string name="lock_screen_title_pf">Input pin code or use fingerprint</string>
-    <string name="settings_pf">Settings</string>
-    <string name="no_fingerprints_message_pf">No fingerprints found. Please add fingerprints in the settings if you want to use this authorization method."</string>
-    <string name="no_fingerprints_title_pf">"No fingerprints found"</string>
+    <string name="next_pf">Келесі</string>
 
-    <string name="fingerprint_not_recognized_pf">Fingerprint not recognized. Try again</string>
-    <string name="fingerprint_success_pf">Fingerprint recognized</string>
-    <string name="fingerprint_description_pf">Confirm fingerprint to continue</string>
-    <string name="fingerprint_hint_pf">Touch sensor</string>
-    <string name="description_fingerprint_icon_pf">Fingerprint icon</string>
-    <string name="export">Export</string>
-    <string name="export_image">Export Image</string>
-    <string name="export_txt_file">Export Txt File</string>
-    <string name="export_image_file">Export Image File</string>
+    <string name="export">Экспорт</string>
+    <string name="export_image">Суретті Экспорттау</string>
+    <string name="export_txt_file">Txt Файлын Экспорттау</string>
+    <string name="export_image_file">Сурет Файлын Экспорттау</string>
 
+    <string name="language">Тіл</string>
 
-
-    <string name="privacy_policy">Privacy Policy</string>
-
-    <string name="app_theme">App Theme</string>
-    <string name="dark_or_light_mode">Dark or Light Mode</string>
-    <string name="cache">Cache</string>
-    <string name="about_">About</string>
-    <string name="about">About Us</string>
-    <string name="social_links">Social links, policy</string>
-    <string name="this_app_privacy_policy">This app privacy policy</string>
-    <string name="rate_the_app">Rate the app</string>
-    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
-    <string name="share_the_app">Share the app with your friends and family</string>
-    <string name="language">Language</string>
-    <string name="high_security">High security</string>
 </resources>
